# sc-FOG-pub

./: README.md  pyproject.toml  sc-fog-conda.yml  student_notebook.ipynb
